Added crud services, added some rest controllers, fixed entities, added dtos